<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="18dp"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/welcome_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:text="@string/welcome_back"
        android:textColor="@color/blue"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/below_welcome_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/below_welcome"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="@+id/welcome_tv"
        app:layout_constraintStart_toStartOf="@+id/welcome_tv"
        app:layout_constraintTop_toBottomOf="@+id/welcome_tv" />

    <EditText
        android:id="@+id/username_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:backgroundTint="@color/blue"
        android:hint="username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/below_welcome_tv" />

    <EditText
        android:id="@+id/password_ed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/blue"
        android:hint="password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/username_et"
        app:layout_constraintTop_toBottomOf="@+id/username_et" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/log_in_btn"
        android:textSize="18dp"
        android:textStyle="bold"
        android:fadingEdge="vertical"
        android:backgroundTint="@color/blue"
        app:layout_constraintTop_toBottomOf="@+id/password_ed"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/sing_up_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/you_dont_have_an_account_sign_up"
        android:textColor="@color/black"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="@+id/login_btn"
        app:layout_constraintHorizontal_bias="0.34"
        app:layout_constraintStart_toStartOf="@+id/login_btn"
        app:layout_constraintTop_toBottomOf="@+id/login_btn" />

    <ImageView
        android:id="@+id/view_image"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:src="@drawable/hide_icon"
        android:scaleType="centerCrop"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintBottom_toBottomOf="@+id/password_ed"
        app:layout_constraintEnd_toEndOf="@+id/password_ed"
        app:layout_constraintTop_toTopOf="@+id/password_ed" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sign Up"
        android:textSize="18dp"
        android:textColor="@color/blue"
        app:layout_constraintBaseline_toBaselineOf="@+id/sing_up_tv"
        app:layout_constraintStart_toEndOf="@+id/sing_up_tv" />

</androidx.constraintlayout.widget.ConstraintLayout>